--- a/index.html
+++ b/index.html
@@ -5,38 +5,98 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quotation App v0.1</title>
     <style>
-        /* CSS 樣式與之前相同，此處省略以保持簡潔 */
         :root {
-            --panel-border-color: #d1d5db; --keyboard-bg-color: #f3f4f6;
-            --app-bg-color: #ffffff; --highlight-color: #a0d3e8;
+            --panel-border-color: #d1d5db;
+            --keyboard-bg-color: #f3f4f6;
+            --app-bg-color: #ffffff;
+            --highlight-color: #a0d3e8;
+            --primary-color: #1a237e; /* 深藍色 */
         }
-        html, body { height: 100%; margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; background-color: #f0f2f5; overflow: hidden; }
-        .app-container { display: flex; flex-direction: column; height: 100%; width: 100%; max-width: 1000px; margin: 0 auto; background-color: var(--app-bg-color); box-shadow: 0 4px 20px rgba(0,0,0,0.1); position: relative; overflow: hidden; }
-        .results-panel { flex-grow: 1; overflow-y: auto; padding: 20px; box-sizing: border-box; }
+        html, body {
+            height: 100%; margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+            background-color: #f0f2f5; overflow: hidden;
+        }
+        .app-container {
+            display: flex; flex-direction: column;
+            height: 100%; width: 100%;
+            max-width: 1000px; margin: 0 auto;
+            background-color: var(--app-bg-color);
+            box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+        }
+        .results-panel {
+            flex-grow: 1; overflow-y: auto; padding: 20px; box-sizing: border-box;
+        }
         .results-panel h3 { margin-top: 0; }
         .results-table { width: 100%; border-collapse: collapse; }
         .results-table th, .results-table td { border: 1px solid #ddd; padding: 8px; text-align: center; transition: background-color 0.3s; }
         .results-table thead { background-color: #f2f2f2; }
-        .results-table th[data-column="TYPE"] { cursor: pointer; } /* 讓TYPE表頭有手型指標 */
+        .results-table th[data-column="TYPE"] { cursor: pointer; }
         .results-table td.highlighted-cell { background-color: var(--highlight-color); }
-        .keyboard-panel { flex-shrink: 0; background-color: var(--keyboard-bg-color); border-top: 1px solid var(--panel-border-color); padding: 15px; padding-top: 35px; position: relative; transition: all 0.3s ease-in-out; box-sizing: border-box; }
-        .input-display, .virtual-keyboard { transition: opacity 0.2s, visibility 0.2s; }
-        .input-display { border: 1px solid #ccc; background-color: #fff; padding: 10px; font-size: 1.8em; text-align: right; margin-bottom: 15px; min-height: 36px; border-radius: 4px; }
-        .virtual-keyboard { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; }
-        .virtual-keyboard button { padding: 12px 5px; font-size: 1.3em; cursor: pointer; border-radius: 4px; border: 1px solid #ccc; background-color: #fff; display: flex; justify-content: center; align-items: center; font-weight: 500; }
-        .panel-toggle { position: absolute; top: 5px; left: 50%; transform: translateX(-50%); width: 80px; height: 20px; border: 1px solid #ccc; background-color: #fff; border-radius: 10px; cursor: pointer; display: flex; justify-content: center; align-items: center; z-index: 10; }
-        .panel-toggle .toggle-arrow { width: 20px; height: 20px; transition: opacity 0.3s ease-in-out; position: absolute; }
+
+        /* [新增] TYPE 欄位的字體樣式 */
+        .type-bo1 {
+            font-weight: bold;
+            font-style: italic;
+        }
+        .type-sn {
+            color: var(--primary-color);
+            font-weight: bold;
+        }
+
+        .keyboard-panel {
+            flex-shrink: 0; background-color: var(--keyboard-bg-color);
+            border-top: 1px solid var(--panel-border-color);
+            padding: 15px; padding-top: 35px;
+            position: relative; transition: all 0.3s ease-in-out;
+            box-sizing: border-box;
+        }
+        .input-display, .virtual-keyboard {
+            transition: opacity 0.2s, visibility 0.2s;
+        }
+        .input-display {
+            border: 1px solid #ccc; background-color: #fff;
+            padding: 10px; font-size: 1.8em; text-align: right;
+            margin-bottom: 15px; min-height: 36px; border-radius: 4px;
+        }
+        .virtual-keyboard {
+            display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px;
+        }
+        .virtual-keyboard button {
+            padding: 12px 5px; font-size: 1.3em;
+            cursor: pointer; border-radius: 4px; border: 1px solid #ccc; background-color: #fff;
+            display: flex; justify-content: center; align-items: center; font-weight: 500;
+        }
+        .panel-toggle {
+            position: absolute; top: 5px; left: 50%;
+            transform: translateX(-50%);
+            width: 80px; height: 20px;
+            border: 1px solid #ccc; background-color: #fff; border-radius: 10px;
+            cursor: pointer; display: flex; justify-content: center; align-items: center; z-index: 10;
+        }
+        .panel-toggle .toggle-arrow {
+            width: 20px; height: 20px; transition: opacity 0.3s ease-in-out; position: absolute;
+        }
         .keyboard-panel .arrow-down { opacity: 1; }
         .keyboard-panel .arrow-up { opacity: 0; }
         .keyboard-panel.is-collapsed .arrow-down { opacity: 0; }
         .keyboard-panel.is-collapsed .arrow-up { opacity: 1; }
-        .keyboard-panel.is-collapsed { height: 30px; padding: 0; border-top-width: 1px; }
-        .keyboard-panel.is-collapsed .panel-toggle { top: 50%; transform: translateX(-50%) translateY(-50%); }
+        .keyboard-panel.is-collapsed {
+            height: 30px; padding: 0; border-top-width: 1px;
+        }
+        .keyboard-panel.is-collapsed .panel-toggle {
+            top: 50%; transform: translateX(-50%) translateY(-50%);
+        }
         .keyboard-panel.is-collapsed .input-display,
-        .keyboard-panel.is-collapsed .virtual-keyboard { visibility: hidden; opacity: 0; }
+        .keyboard-panel.is-collapsed .virtual-keyboard {
+            visibility: hidden; opacity: 0;
+        }
         .key-zero { grid-column: span 2; }
         .key-function { background-color: #e5e7eb; }
-        .key-enter { grid-row: span 2; background-color: #e5e7eb; font-weight: bold; font-size: 2.2em; padding-bottom: 25px; }
+        .key-enter {
+            grid-row: span 2; background-color: #e5e7eb;
+            font-weight: bold; font-size: 2.2em; padding-bottom: 25px;
+        }
     </style>
 </head>
 <body>
@@ -46,10 +106,8 @@
             <table class="results-table" id="results-table">
                 <thead>
                     <tr>
-                        <th data-column="W">W</th>
-                        <th data-column="H">H</th>
-                        <th data-column="TYPE">TYPE</th>
-                        <th data-column="Price">Price</th>
+                        <th data-column="W">W</th><th data-column="H">H</th>
+                        <th data-column="TYPE">TYPE</th><th data-column="Price">Price</th>
                     </tr>
                 </thead>
                 <tbody></tbody>
